--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@400..700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="{% static "dist/root.css" %}" />
+    <script type="module" src="{% static "dist/main.js" %}"></script>
     {% block head %}{% endblock %}
   </head>
   <body>
