Add actor creation

--- a/src/cloneugc/templates/app.html
+++ b/src/cloneugc/templates/app.html
@@ -8,8 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@400..700&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="{% static "app.css" %}" />
-    <script type="module" src="{% static "app.js" %}"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20,600,1,0&icon_names=close" />
+    <link rel="stylesheet" href="{% static 'app.css' %}" />
+    <script type="module" src="{% static 'app.js' %}"></script>
     {% block head %}{% endblock %}
   </head>
   <body>
