Add helper text

--- a/src/cloneugc/templates/cloneugc/actor_list.html
+++ b/src/cloneugc/templates/cloneugc/actor_list.html
@@ -19,7 +19,10 @@
   </aside>
   <div class="flex-1">
     <header class="flex items-center justify-between px-7 pt-7">
-      <h1 class="text-3xl font-bold">Available Actors</h1>
+      <hgroup>
+        <h1 class="text-3xl font-bold">Available Actors</h1>
+        <p class="text-lg font-medium text-stone-500">Click on actor to continue</p>
+      </hgroup>
       <button id="create-actor-trigger" class="fixed z-20 right-5 bottom-7 shrink-0 btn shadow-lg sm:shadow-none sm:static">Create Actor</button>
     </header>
     <dialog id="create-actor" class="mx-auto mt-auto w-full max-w-md rounded-t-xl rounded-l-xl rounded-r-xl rounded-b-none bg-white p-5 backdrop:bg-black/30 min-sm:mb-auto sm:rounded-b-xl">
