--- a/src/cloneugc/templates/cloneugc/actor_list.html
+++ b/src/cloneugc/templates/cloneugc/actor_list.html
@@ -27,7 +27,7 @@
     </header>
     <dialog id="create-actor" class="mx-auto mt-auto w-full max-w-md rounded-t-xl rounded-l-xl rounded-r-xl rounded-b-none bg-white p-5 backdrop:bg-black/30 min-sm:mb-auto sm:rounded-b-xl">
       <hgroup class="flex gap-x-2 items-center justify-between">
-        <h4 class="text-xl font-bold">Create Actor</h4>
+        <h4 class="text-2xl font-bold">Create Actor</h4>
         <button id="close" type="button" class="material-symbols-rounded rounded-full size-10 active:bg-stone-100 flex items-center justify-center">
           close
         </button>
@@ -63,7 +63,7 @@
             </media-controller>
           </figure>
         {% empty %}
-          <p>No actors found.</p>
+          <p class="text-xl font-bold">No actors found.</p>
         {% endfor %}
       </section>
     </main>
