Update navbar styles

--- a/src/cloneugc/templates/cloneugc/actor_list.html
+++ b/src/cloneugc/templates/cloneugc/actor_list.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <div class="flex">
-  <aside class="p-7 h-screen bg-stone-100">
+  <aside class="p-7 h-screen bg-stone-100 sticky top-0">
     <nav class="flex flex-col">
       <a data-active="{% if url_name == 'actor_list' %}true{% else %}false{% endif %}" href="{% url 'actor_list' %}" class="w-full flex flex-col items-center justify-center gap-y-1 group">
         <span class="material-symbols-rounded rounded-full group-data-[active=true]:bg-pink-200 group-data-[active=true]:text-pink-800 py-1 px-3 group-hover:bg-stone-200">comedy_mask</span>
