--- a/src/cloneugc/templates/cloneugc/actor_list.html
+++ b/src/cloneugc/templates/cloneugc/actor_list.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <div class="flex">
-  <aside class="p-7 h-screen bg-stone-100 sticky top-0">
+  <aside class="p-7 h-screen bg-stone-100 sticky top-0 sm:block hidden">
     <nav class="flex flex-col">
       <a data-active="{% if url_name == 'actor_list' %}true{% else %}false{% endif %}" href="{% url 'actor_list' %}" class="w-full flex flex-col items-center justify-center gap-y-1 group">
         <span class="material-symbols-rounded rounded-full group-data-[active=true]:bg-pink-200 group-data-[active=true]:text-pink-800 py-1 px-3 group-hover:bg-stone-200">comedy_mask</span>
@@ -18,6 +18,24 @@
     </nav>
   </aside>
   <div class="flex-1">
+    <header class="h-16 flex items-center justify-between bg-white shadow-sm sticky top-0 z-30 px-4 sm:hidden">
+      <button id="nav-trigger" class="material-symbols-rounded rounded-full size-10 active:bg-stone-100 flex items-center justify-center">
+        menu
+      </button>
+    </header>
+    <dialog id="nav" class="max-w-xs w-full bg-white h-full max-h-full backdrop:bg-black/30">
+      <header class="h-16 flex items-center justify-between px-4">
+        <button id="close" class="material-symbols-rounded rounded-full size-10 active:bg-stone-100 flex items-center justify-center">
+          menu_open
+        </button>
+      </header>
+      <nav class="flex flex-col px-4">
+        <a data-active="{% if url_name == 'actor_list' %}true{% else %}false{% endif %}" href="{% url 'actor_list' %}" class="w-full flex gap-x-2.5 items-center group rounded-full bg-pink-200 py-2 px-3">
+          <span class="material-symbols-rounded">comedy_mask</span>
+          <span class="text-xl font-semibold">Actors</span>
+        </a>
+      </nav>
+    </dialog>
     <header class="flex items-center justify-between px-7 pt-7">
       <hgroup>
         <h1 class="text-3xl font-bold">Available Actors</h1>
@@ -25,7 +43,7 @@
       </hgroup>
       <button id="create-actor-trigger" class="fixed z-20 right-5 bottom-7 shrink-0 btn shadow-lg sm:shadow-none sm:static">Create Actor</button>
     </header>
-    <dialog id="create-actor" class="mx-auto mt-auto w-full max-w-md rounded-t-xl rounded-l-xl rounded-r-xl rounded-b-none bg-white p-5 backdrop:bg-black/30 min-sm:mb-auto sm:rounded-b-xl">
+    <dialog id="create-actor" class="mx-auto mt-auto w-full max-w-md rounded-t-xl rounded-l-xl rounded-r-xl rounded-b-none bg-white p-5 backdrop:bg-black/30 min-[28rem]:mb-auto min-[28rem]:rounded-b-xl">
       <hgroup class="flex gap-x-2 items-center justify-between">
         <h4 class="text-2xl font-bold">Create Actor</h4>
         <button id="close" type="button" class="material-symbols-rounded rounded-full size-10 active:bg-stone-100 flex items-center justify-center">
