--- a/src/cloneugc/templates/cloneugc/actor_list.html
+++ b/src/cloneugc/templates/cloneugc/actor_list.html
@@ -69,7 +69,7 @@
         {% for actor in actors %}
           <figure class="relative">
             <figcaption class="absolute inset-x-0 top-0 z-10 rounded-t-xl bg-linear-to-b from-black/20 to-black/0 p-4">
-              <a href="{% url 'clone_actor' actor.id %}" class=" text-xl font-semibold text-white text-shadow-xs hover:underline">{{ actor.name }}</a>
+              <a href="{% url 'create_video' %}?actor_id={{ actor.id }}" class=" text-xl font-semibold text-white text-shadow-xs hover:underline">{{ actor.name }}</a>
             </figcaption>
             <media-controller class="size-full rounded-xl aspect-[9/16]">
               <video
