--- a/src/static/app.css
+++ b/src/static/app.css
@@ -1,5 +1,11 @@
 @import "tailwindcss";
 
+@theme {
+  --color-media-text: #eeeeee;
+  --color-media-control: rgba(20, 20, 30, 0.7);
+  --color-media-control-hover: rgba(50, 50, 50, 0.7);
+}
+
 @layer base {
   body {
     color: var(--color-stone-950);
