--- a/src/cloneugc/templates/cloneugc/actor_list.html
+++ b/src/cloneugc/templates/cloneugc/actor_list.html
@@ -10,10 +10,14 @@
 {% block content %}
 <div class="flex">
   <aside class="p-7 h-screen bg-stone-100 sticky top-0 sm:block hidden">
-    <nav class="flex flex-col">
+    <nav class="flex flex-col gap-y-4">
       <a data-active="{% if url_name == 'actor_list' %}true{% else %}false{% endif %}" href="{% url 'actor_list' %}" class="w-full flex flex-col items-center justify-center gap-y-1 group">
         <span class="material-symbols-rounded rounded-full group-data-[active=true]:bg-pink-200 group-data-[active=true]:text-pink-800 py-1 px-3 group-hover:bg-stone-200">comedy_mask</span>
         <span class="text-xl font-semibold group-data-[active=true]:text-pink-800">Actors</span>
+      </a>
+      <a data-active="{% if url_name == 'video_list' %}true{% else %}false{% endif %}" href="{% url 'video_list' %}" class="w-full flex flex-col items-center justify-center gap-y-1 group">
+        <span class="material-symbols-rounded rounded-full group-data-[active=true]:bg-pink-200 group-data-[active=true]:text-pink-800 py-1 px-3 group-hover:bg-stone-200">movie</span>
+        <span class="text-xl font-semibold group-data-[active=true]:text-pink-800">Videos</span>
       </a>
     </nav>
   </aside>
@@ -29,10 +33,14 @@
           menu_open
         </button>
       </header>
-      <nav class="flex flex-col px-4">
-        <a data-active="{% if url_name == 'actor_list' %}true{% else %}false{% endif %}" href="{% url 'actor_list' %}" class="w-full flex gap-x-2.5 items-center group rounded-full bg-pink-200 py-2 px-3">
+      <nav class="flex flex-col px-4 gap-y-4">
+        <a data-active="{% if url_name == 'actor_list' %}true{% else %}false{% endif %}" href="{% url 'actor_list' %}" class="w-full flex gap-x-2.5 items-center group rounded-full data-[active=true]:bg-pink-200 data-[active=true]:text-pink-800 py-2 px-3 data-[active=false]:hover:bg-stone-200">
           <span class="material-symbols-rounded">comedy_mask</span>
           <span class="text-xl font-semibold">Actors</span>
+        </a>
+        <a data-active="{% if url_name == 'video_list' %}true{% else %}false{% endif %}" href="{% url 'video_list' %}" class="w-full flex gap-x-2.5 items-center group rounded-full data-[active=true]:bg-pink-200 data-[active=true]:text-pink-800 py-2 px-3 data-[active=false]:hover:bg-stone-200">
+          <span class="material-symbols-rounded">movie</span>
+          <span class="text-xl font-semibold">Videos</span>
         </a>
       </nav>
     </dialog>
