--- a/src/cloneugc/templates/cloneugc/video_list.html
+++ b/src/cloneugc/templates/cloneugc/video_list.html
@@ -1,13 +1,84 @@
 {% extends "app.html" %}
+{% load static %}
 
 {% block title %}Videos{% endblock %}
 
-{% block content %}
-<h1>Videos</h1>
+{% block head %}
+  <script type="module" src="{% static 'cloneugc/video-list.js' %}"></script>
+{% endblock %}
 
-<ul>
-  {% for gen in generations %}
-    <li>{{ gen.id }}</li>
-  {% endfor %}
-</ul>
+{% block content %}
+<div class="flex">
+  <aside class="p-7 h-screen bg-stone-100 sticky top-0 sm:block hidden">
+    <nav class="flex flex-col gap-y-4">
+      <a data-active="{% if url_name == 'actor_list' %}true{% else %}false{% endif %}" href="{% url 'actor_list' %}" class="w-full flex flex-col items-center justify-center gap-y-1 group">
+        <span class="material-symbols-rounded rounded-full group-data-[active=true]:bg-pink-200 group-data-[active=true]:text-pink-800 py-1 px-3 group-hover:bg-stone-200">comedy_mask</span>
+        <span class="text-xl font-semibold group-data-[active=true]:text-pink-800">Actors</span>
+      </a>
+      <a data-active="{% if url_name == 'video_list' %}true{% else %}false{% endif %}" href="{% url 'video_list' %}" class="w-full flex flex-col items-center justify-center gap-y-1 group">
+        <span class="material-symbols-rounded rounded-full group-data-[active=true]:bg-pink-200 group-data-[active=true]:text-pink-800 py-1 px-3 group-hover:bg-stone-200">movie</span>
+        <span class="text-xl font-semibold group-data-[active=true]:text-pink-800">Videos</span>
+      </a>
+    </nav>
+  </aside>
+  <div class="flex-1">
+    <header class="h-16 flex items-center justify-between bg-white shadow-sm sticky top-0 z-30 px-4 sm:hidden">
+      <button id="nav-trigger" class="material-symbols-rounded rounded-full size-10 active:bg-stone-100 flex items-center justify-center">
+        menu
+      </button>
+    </header>
+    <dialog id="nav" class="max-w-xs w-full bg-white h-full max-h-full backdrop:bg-black/30">
+      <header class="h-16 flex items-center justify-between px-4">
+        <button id="close" class="material-symbols-rounded rounded-full size-10 active:bg-stone-100 flex items-center justify-center">
+          menu_open
+        </button>
+      </header>
+      <nav class="flex flex-col px-4 gap-y-4">
+        <a data-active="{% if url_name == 'actor_list' %}true{% else %}false{% endif %}" href="{% url 'actor_list' %}" class="w-full flex gap-x-2.5 items-center group rounded-full data-[active=true]:bg-pink-200 data-[active=true]:text-pink-800 py-2 px-3 data-[active=false]:hover:bg-stone-200">
+          <span class="material-symbols-rounded">comedy_mask</span>
+          <span class="text-xl font-semibold">Actors</span>
+        </a>
+        <a data-active="{% if url_name == 'video_list' %}true{% else %}false{% endif %}" href="{% url 'video_list' %}" class="w-full flex gap-x-2.5 items-center group rounded-full data-[active=true]:bg-pink-200 data-[active=true]:text-pink-800 py-2 px-3 data-[active=false]:hover:bg-stone-200">
+          <span class="material-symbols-rounded">movie</span>
+          <span class="text-xl font-semibold">Videos</span>
+        </a>
+      </nav>
+    </dialog>
+    <main class="mt-7 px-7 pb-10 sm:mt-10">
+      <section class="grid grid-cols-[repeat(auto-fit,minmax(--spacing(60),1fr))] gap-5">
+        {% for gen in generations %}
+          {% if gen.done %}
+            <figure class="relative">
+              <figcaption class="absolute inset-x-0 top-0 z-10 rounded-t-xl bg-linear-to-b from-black/20 to-black/0 p-4 text-xl font-semibold text-white text-shadow-xs">
+                {{ gen.created_at|date:"M d" }}
+              </figcaption>
+              <a href="{{ gen.video.url }}" class="absolute bottom-4 right-4 size-11 flex items-center justify-center rounded-full z-10 bg-media-control hover:bg-media-control-hover">
+                <span class="material-symbols-rounded text-media-text">download</span>
+              </a>
+              <media-controller class="size-full rounded-xl aspect-[9/16]">
+                <video
+                  slot="media"
+                  class="size-full rounded-xl object-cover"
+                  src="{{ gen.video.url }}"
+                ></video>
+                <media-control-bar class="p-4">
+                  <media-play-button class="rounded-full p-2.5">
+                    <span slot="play" class="material-symbols-rounded">play_arrow</span>
+                    <span slot="pause" class="material-symbols-rounded">pause</span>
+                  </media-play-button>
+                </media-control-bar>
+              </media-controller>
+            </figure>
+          {% else %}
+            <div class="aspect-[9/16] rounded-xl bg-stone-100 border-2 border-dashed border-stone-200 flex items-center justify-center p-4">
+              <span class="text-xl font-semibold text-stone-500 text-center">{{ gen.status }}</span>
+            </div>
+          {% endif %}
+        {% empty %}
+          <p class="text-xl font-bold">No videos found. Create one on the actors page.</p>
+        {% endfor %}
+      </section>
+    </main>
+  </div>
+</div>
 {% endblock %}
