--- a/src/cloneugc/templates/cloneugc/video_list.html
+++ b/src/cloneugc/templates/cloneugc/video_list.html
@@ -44,6 +44,10 @@
         </a>
       </nav>
     </dialog>
+    <hgroup class="px-7 pt-7">
+      <h1 class="text-3xl font-bold">Your Videos</h1>
+      <p class="text-lg font-medium text-stone-500">Generated videos will appear here</p>
+    </hgroup>
     <main class="mt-7 px-7 pb-10 sm:mt-10">
       <section class="grid grid-cols-[repeat(auto-fit,minmax(--spacing(60),1fr))] gap-5">
         {% for gen in generations %}
