--- a/cloneugc/templates/app.html
+++ b/cloneugc/templates/app.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@400..700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..24,600,1,0" />
     <link rel="stylesheet" href="{% static 'app.css' %}" />
-    <script type="module" src="{% static 'app.js' %}"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/media-chrome@4/+esm"></script>
     {% block head %}{% endblock %}
   </head>
   <body>
