--- a/studio/templates/studio/ugc_form.html
+++ b/studio/templates/studio/ugc_form.html
@@ -1,6 +1,12 @@
-<h2>Create UGC</h2>
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Create</button>
-</form>
+{% extends "base.html" %}
+
+{% block title %}Create UGC{% endblock %}
+
+{% block content %}
+  <h2>Create UGC</h2>
+  <form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Create</button>
+  </form>
+{% endblock %}
