Update ugc form view

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -4,24 +4,27 @@
   body {
     font-family: "Commissioner", var(--font-sans);
     font-variation-settings: "slnt" 0, "FLAR" 0, "VOLM" 0;
+    background-color: var(--color-stone-50);
   }
 }
 
 @layer components {
   .form-label {
-    font-weight: 500;
+    font-weight: 600;
     font-size: var(--text-lg);
     line-height: var(--text-lg--line-height);
     color: var(--color-stone-900);
+    user-select: none;
   }
 
   .form-textarea {
     background-color: var(--color-white);
-    border: 1px solid --alpha(var(--color-black) / 15%);
+    border: 1px solid --alpha(var(--color-black) / 20%);
     border-radius: var(--radius-md);
     box-shadow: var(--shadow-xs);
     color: var(--color-stone-900);
     font-size: var(--text-lg);
+    font-weight: 500;
     line-height: var(--text-lg--line-height);
     padding: --spacing(3);
 
@@ -33,9 +36,9 @@
   .button {
     background-color: var(--color-pink-700);
     color: var(--color-white);
-    font-size: var(--text-lg);
+    font-size: var(--text-xl);
     font-weight: 600;
-    line-height: var(--text-lg--line-height);
+    line-height: var(--text-xl--line-height);
     border-radius: calc(infinity * 1px);
     padding: --spacing(1.5) --spacing(2.5);
 
