--- a/studio/templates/studio/ugc_form.html
+++ b/studio/templates/studio/ugc_form.html
@@ -8,30 +8,43 @@
 {% endblock %}
 
 {% block content %}
-  <main class="p-8 bg-white border border-black/15 m-10 rounded-xl shadow-md shadow-black/5 max-w-lg">
-    <h2 class="text-2xl font-bold">Create UGC</h2>
-    <form method="post" class="mt-10">
-      {% csrf_token %}
-      <span class="form-label">1. Select Creator</span>
-      <input id="creator-input" type="hidden" name="creator">
-      <div class="grid grid-cols-3 gap-5 mt-4">
-        {% for creator in creators %}
-          <video id="creator-video" data-creator-id="{{ creator.id }}" class="aspect-[9/16] rounded-lg data-[selected=true]:outline-2 data-[selected=true]:outline-pink-700 bg-stone-100" src="{{ creator.public_video_url }}" autoplay muted loop playsinline></video>
-        {% endfor %}
-      </div>
-      <div class="mt-10">
-        <div class="flex justify-between items-center">
-          <label for="script" class="form-label block w-fit">
-            2. Write Script
-          </label>
-          <button id="prepare-script-trigger" type="button" class="button-soft">Prepare Script</button>
+  <div class="m-10 flex gap-10">
+    <main class="p-8 bg-white border border-black/15 rounded-xl shadow-md shadow-black/5 max-w-lg w-full max-h-fit">
+      <h2 class="text-2xl font-bold">Create UGC</h2>
+      <form method="post" class="mt-10">
+        {% csrf_token %}
+        <span class="form-label">1. Select Creator</span>
+        <input id="creator-input" type="hidden" name="creator">
+        <div class="grid grid-cols-3 gap-5 mt-4">
+          {% for creator in creators %}
+            <video id="creator-video" data-creator-id="{{ creator.id }}" class="aspect-[9/16] rounded-lg data-[selected=true]:outline-2 data-[selected=true]:outline-pink-700 bg-stone-100" src="{{ creator.public_video_url }}" autoplay muted loop playsinline></video>
+          {% endfor %}
         </div>
-        <textarea id="script" name="script" class="form-textarea mt-4 w-full min-h-64" required></textarea>
-        <p class="text-base text-stone-500 mt-2">
-          Add punctuation where appropriate. Use “-” to indicate pauses, and use “dot” instead of “.” in URLs. Use two question marks for questions, avoid using quotation marks, and put a space before a question mark.
-        </p>
-      </div>
-      <button class="button mt-12 min-w-32">Create</button>
-    </form>
-  </main>
+        <div class="mt-10">
+          <div class="flex justify-between items-center">
+            <label for="script" class="form-label block w-fit">
+              2. Write Script
+            </label>
+            <button id="prepare-script-trigger" type="button" class="button-soft">Prepare Script</button>
+          </div>
+          <textarea id="script" name="script" class="form-textarea mt-4 w-full min-h-64" required></textarea>
+          <p class="text-base text-stone-500 mt-2">
+            Add punctuation where appropriate. Use “-” to indicate pauses, and use “dot” instead of “.” in URLs. Use two question marks for questions, avoid using quotation marks, and put a space before a question mark.
+          </p>
+        </div>
+        <button class="button mt-12 min-w-32">Create</button>
+      </form>
+    </main>
+    <aside class="flex-1 grid grid-cols-3 h-full gap-5">
+      {% for ugc in ugcs %}
+        {% if ugc.public_video_url %}
+          <video src="{{ ugc.public_video_url }}" class="aspect-[9/16] rounded-lg bg-stone-100" playsinline controls></video>
+        {% else %}
+          <div class="aspect-[9/16] rounded-lg bg-stone-100 border-2 border-dashed border-stone-300 text-base text-stone-500 text-center flex items-center justify-center font-medium p-4 text-pretty">
+            Processing, contact support if it takes over 1 hour.
+          </div>
+        {% endif %}
+      {% endfor %}
+    </aside>
+  </div>
 {% endblock %}
