--- a/static/css/base.css
+++ b/static/css/base.css
@@ -13,7 +13,6 @@
     font-weight: 600;
     font-size: var(--text-lg);
     line-height: var(--text-lg--line-height);
-    color: var(--color-stone-900);
     user-select: none;
   }
 
@@ -22,7 +21,6 @@
     border: 1px solid --alpha(var(--color-black) / 20%);
     border-radius: var(--radius-md);
     box-shadow: var(--shadow-xs);
-    color: var(--color-stone-900);
     font-size: var(--text-lg);
     font-weight: 500;
     line-height: var(--text-lg--line-height);
@@ -65,6 +63,25 @@
 
     &:active {
       background-color: var(--color-pink-100);
+    }
+
+    &:disabled {
+      background-color: var(--color-stone-100);
+      color: var(--color-stone-500);
+    }
+  }
+
+  .button-surface {
+    background-color: var(--color-white);
+    border: 1px solid --alpha(var(--color-black) / 25%);
+    font-size: var(--text-sm);
+    font-weight: 600;
+    line-height: var(--text-sm--line-height);
+    border-radius: calc(infinity * 1px);
+    padding: --spacing(1) --spacing(2.5);
+
+    &:active {
+      background-color: var(--color-stone-100);
     }
 
     &:disabled {
