--- a/studio/templates/studio/ugc_form.html
+++ b/studio/templates/studio/ugc_form.html
@@ -46,7 +46,7 @@
           <button class="button mt-12 min-w-32">Create</button>
         {% else %}
           <div class="mt-12 flex items-center gap-2 flex-col justify-center">
-            <span class="text-xl text-stone-500">You don't have enough credits.</span>
+            <span class="text-xl font-bold">You don't have enough credits.</span>
             <a class="button" href="#">Buy Credits</a>
           </div>
         {% endif %}
